			Java Electric change log ( MAIN branch )

NOTE: Please place changes under the version that will be released next.

************************* Version 8.04b: *********************************

IMP: (10/07/05, GVG) Cadence Preferences XML under SunAsync menu. It will allow you to backup previous configuration.

IMP: (10/07/05, GVG) Disconnect resizing of arcs when you switch from Mosis->TSMC until better solution is found.

BUG: (10/07/05, SMR) Pure layer nodes of well or select are not drawn (Bug #622).
FIX: In VectorDrawing, do not ignore well/select layers from pure-layer nodes.

IMP: (10/07/05, SMR) Parasitics preferences now have technology popup.

BUG: (10/07/05, SMR) Component menu has wrong background color (Bug #620).
FIX: Moved initialization of background color in PixelDrawing.java.

BUG: (10/06/05, DN) Epic waveform viewer exception while reading incomplete out file (Bug #619)
FIX: In EpicOut.EpicReader.readBug set "bufL = 0" on EOF.

IMP: (10/06/05, SMR) Grid preferences now offers option to show axes through origin (Bug #616).

BUG: (10/06/05, SMR) Graphical cell lists always show the entire library,
     never from current cell (Bug #614).
FIX: In CircuitChanges.GraphCells constructor, save "top" parameter.

BUG: (10/06/05, SMR) List Cell Usage doesn't handle icons (Bug #618).
FIX: In CellUsage.java, consider icon cells, too.

BUG: (10/06/05, SMR) Colors are not updated after importing preferences.
FIX: Added recaching to EGraphics, delayed background caching to PixelDrawing.

BUG: (10/06/05, SMR) New "Layers" tab doesn't always show the preview.
FIX: Made the preview be separate from the color chooser.

BUG: (10/06/05, SMR) Cell frames are not visible when the background is black (Bug #615).
FIX: Use proper color, not black.

BUG: (10/06/05, SMR) Printing schematics and layout is wrong.
FIX: In EditWindow.paint() and EditWindow.repaintContents(), ignore windows with no frame.
